--- a/z5style.css
+++ b/z5style.css
@@ -35,7 +35,7 @@ body{ background-color:#202020;}
 }
 
 .button{
-  background: linear-gradient(90deg,red 0,#a100ff);
+  background: #8230c6;
   border:none;
   color:#fff;
   font-size:15px;
